tests/baselines/reference/checkJsFiles2.errors.txt
tests/cases/compiler/a.js(3,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/a.js (1 errors) ====
    // @ts-check
    var x = "string";
    x = 0;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.